# aws-razor

./: .env.termux  README.md  pyproject.toml
src/aws_razor/: main.py
